--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,13 @@
 {
-	"extends": [
-		"@dialexa/eslint-config-dialexa/react"
-	]
+  "extends": [
+    "@dialexa/eslint-config-dialexa/react",
+		"plugin:jest/recommended",
+		"plugin:react-hooks/recommended"
+  ],
+  "plugins": ["jest", "react", "react-hooks"],
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
+    }
+  }
 }
