--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "webpack-react-quickstart",
   "version": "0.0.1",
-  "description": "Webpack quick start with React",
+  "description": "React App Quickstart Template",
   "main": "index.js",
   "repository": "https://github.com/jeffpalm/webpack-react-quickstart.git",
   "author": "Jeff Palmer",
@@ -12,19 +12,27 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
     "@dialexa/eslint-config-dialexa": "^5.3.0",
+    "@testing-library/react": "^11.0.4",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.5.0",
     "babel-loader": "^8.1.0",
     "eslint": "^7.10.0",
+    "eslint-plugin-jest": "^24.1.0",
     "eslint-plugin-react": "^7.21.3",
+    "eslint-plugin-react-hooks": "^4.1.2",
+    "jest": "^26.5.0",
+    "react-test-renderer": "^16.13.1",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
   "scripts": {
-    "start": "webpack-dev-server --progress"
+    "start": "webpack-dev-server --progress",
+    "test": "jest"
   }
 }
