--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "eslint-plugin-jest": "^24.1.0",
     "eslint-plugin-react": "^7.21.3",
     "eslint-plugin-react-hooks": "^4.1.2",
+    "eslint-webpack-plugin": "^2.1.0",
+    "html-loader": "^1.3.1",
+    "html-webpack-plugin": "^4.5.0",
     "jest": "^26.5.0",
     "react-test-renderer": "^16.13.1",
     "webpack": "^4.44.2",
@@ -32,7 +35,8 @@
     "react-dom": "^16.13.1"
   },
   "scripts": {
-    "start": "webpack-dev-server --progress",
+    "start": "webpack-dev-server --open --progress --mode=development",
+    "build": "webpack --mode=production",
     "test": "jest"
   }
 }
