--- a/package.json
+++ b/package.json
@@ -16,15 +16,21 @@
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.5.0",
     "babel-loader": "^8.1.0",
+    "css-loader": "^4.3.0",
     "eslint": "^7.10.0",
     "eslint-plugin-jest": "^24.1.0",
     "eslint-plugin-react": "^7.21.3",
     "eslint-plugin-react-hooks": "^4.1.2",
     "eslint-webpack-plugin": "^2.1.0",
+    "fibers": "^5.0.0",
     "html-loader": "^1.3.1",
     "html-webpack-plugin": "^4.5.0",
     "jest": "^26.5.0",
+    "node-sass": "^4.14.1",
+    "prettier": "^2.1.2",
     "react-test-renderer": "^16.13.1",
+    "sass-loader": "^10.0.2",
+    "style-loader": "^1.3.0",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
